--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,21 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div>
+  <h3><%= @user.name %></h3>
+  <%= image_tag @user.get_profile_image(100,100) %>
+  <% if @user == current_user.id %>
+  <p><%= link_to "プロフィール編集", edit_user_path %></p>
+  <% end %>
+</div>
+
+<!-- ユーザーの投稿一覧 -->
+
+<% @ideas.each do |idea| %>
+<div>
+  <p>投稿ユーザー画像：<%= image_tag idea.user.get_profile_image(100,100) %></p>
+  <p>テーマ：<%= idea.title %></p>
+  <p>説明：<%= idea.body %></p>
+  <%= link_to idea_path(idea.id) do %>
+    <%= image_tag idea.get_image %>
+  <% end %>
+  <p>ユーザーネーム：<%= idea.user.name %></p>
+</div>
+<% end %>
