--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,29 +5,78 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/186f5e30ba.js" crossorigin="anonymous"></script>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-      <header>
-    <% if user_signed_in? %>
-      <li>
-       <%= link_to '投稿フォーム', new_idea_path %>
-      </li>
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
-  </header>
-    <%= yield %>
+  <body class="d-flex flex-column vh-100">
+   <header class="shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-light">
+     <div class="container">
+      <a class="navbar-brand p-3" href="/"><%= image_tag('no_image.jpg') %></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+         <ul class="navbar-nav ml-auto">
+         <% if user_signed_in? %>
+         <li class="nav-item">
+           <%= link_to '投稿フォーム', new_idea_path %>
+         </li>
+         <li class="nav-item">
+           <%= link_to '投稿一覧', ideas_path %>
+         </li>
+         <li class="nav-item">
+           <%= link_to 'マイページ', user_path(current_user.id) %>
+         </li>
+         <li class="nav-item">
+           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+         </li>
+         <% else %>
+         <li class="nav-item">
+         <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %>
+         </li>
+         <li class="nav-item">
+           <%= link_to "新規登録", new_user_registration_path %>
+         </li>
+         <li class="nav-item">
+           <%= link_to "ログイン", new_user_session_path %>
+         </li>
+         <% end %>
+         </ul>
+      </div>
+     </div>
+    </nav>
+   </header>
+   <main class="mb-auto">
+   <%= yield %>
+   </main>
+   <footer class="bg-dark text-white pt-5 pb-4">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <p>教育活動アイデアを共有しあうサイト</p>
+            <%= image_tag('no_image.jpg') %>
+          </div>
+          <div class="col-md-8">
+            <h6 class="text-white mt-2 mb-3">Link</h6>
+            <ul class="p-0 list-unstyled">
+              <li>
+                <a href="" title="About" class="text-white-50">会社概要</a>
+              </li>
+              <li>
+                <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+
   </body>
 </html>
