--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
          <ul class="navbar-nav ml-auto">
          <% if user_signed_in? %>
          <li class="nav-item">
+           <%= link_to '検索', search_path %>
+         </li>
+         <li class="nav-item">
            <%= link_to '投稿フォーム', new_idea_path %>
          </li>
          <li class="nav-item">
@@ -34,7 +37,7 @@
            <%= link_to 'マイページ', user_path(current_user.id) %>
          </li>
          <li class="nav-item">
-           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+           <%= button_to "ログアウト", destroy_user_session_path, method: :delete %>
          </li>
          <% else %>
          <li class="nav-item">
