--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in? %>
+
   <div class="search_form">
     <%= form_with url: search_path, local: true, method: :get do |f| %>
       <%= f.text_field :word %>
@@ -7,4 +7,28 @@
       <%= f.submit "検索", class: "btn btn-primary" %>
     <% end %>
   </div>
-<% end %>
+
+<h2>検索結果</h2>
+
+<table>
+  <% if @range == "User" %>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.name %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  <% elsif @range == "Idea" %>
+    <tbody>
+      <% @ideas.each do |idea| %>
+        <tr>
+          <td><%= idea.title %></td>
+          <td><%= idea.body %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  
+    
+  <% end %>
+</table>
