--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,9 @@
            <%= link_to '投稿一覧', ideas_path %>
          </li>
          <li class="nav-item">
+           <%= link_to 'ユーザー一覧', users_path %>
+         </li>
+         <li class="nav-item">
            <%= link_to 'マイページ', user_path(current_user.id) %>
          </li>
          <li class="nav-item">
