--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,5 +1,6 @@
 <div>
   <h3><%= @user.name %></h3>
+  <h3><%= @user.body %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
   <% if @user == current_user %>
   <%= link_to "プロフィール編集", edit_user_path(@user) %>
