--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -7,3 +7,7 @@
  <li class="nav-item">
   <%= link_to 'コメント一覧', admin_ideas_path %>
  </li>
+
+ <li class="nav-item">
+  <%= link_to 'グループ一覧', admin_groups_path %>
+ </li>
