--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,6 @@
          <ul class="navbar-nav ml-auto">
          <% if user_signed_in? %>
          <li class="nav-item">
-           <%= link_to '検索', search_path %>
-         </li>
-         <li class="nav-item">
            <%= link_to '投稿フォーム', new_idea_path %>
          </li>
          <li class="nav-item">
@@ -38,6 +35,9 @@
          </li>
          <li class="nav-item">
            <%= link_to 'マイページ', user_path(current_user.id) %>
+         </li>
+         <li>
+           <%= render 'public/searches/search' %>
          </li>
          <li class="nav-item">
            <%= button_to "ログアウト", destroy_user_session_path, method: :delete %>
