--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -2,7 +2,9 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'users/info', user: current_user %>
+   　<% @group.users.each do |user| %>
+      <%= user.name %>
+     <% end %>
 
       <h2 class="mt-3">New idea</h2>
 
