--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,13 +1,3 @@
-
-  <div class="search_form">
-    <%= form_with url: search_path, local: true, method: :get do |f| %>
-      <%= f.text_field :word %>
-      <%= f.select :range, options_for_select([['User'], ['Idea']]) %>
-      <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
-      <%= f.submit "検索", class: "btn btn-primary" %>
-    <% end %>
-  </div>
-
 <h2>検索結果</h2>
 
 <table>
@@ -19,16 +9,14 @@
         </tr>
       <% end %>
     </tbody>
-  <% elsif @range == "Idea" %>
+  <% else %>
     <tbody>
-      <% @ideas.each do |idea| %>
+      <% @ideas.each do |book| %>
         <tr>
           <td><%= idea.title %></td>
           <td><%= idea.body %></td>
         </tr>
       <% end %>
     </tbody>
-
-
   <% end %>
 </table>
