--- a/app/views/public/ideas/new.html.erb
+++ b/app/views/public/ideas/new.html.erb
@@ -1,4 +1,16 @@
 <h1>投稿フォーム</h1>
+
+<% if @idea.errors.any? %>
+  <%= @idea.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @idea.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+
+
 <%= form_with model: @idea do |f| %>
   <h4>テーマ</h4>
   <%= f.text_field :title %>
