--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -3,7 +3,7 @@
   <label for="inputName">Name</label>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
   <label for="inputBody">自己紹介</label>
-  <%= f.text_area :introduction, autofocus: true, id:"inputBody", placeholder:"自己紹介"%>
+  <%= f.text_area :body, autofocus: true, id:"inputBody", placeholder:"自己紹介"%>
   <label for="inputImage">ProfileImage</label>
   <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
   <%= f.submit "変更を保存" %>
