--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -1,14 +1,5 @@
 <div class='container px-5 px-sm-0'>
- <div class='row'>
-    <div class='col-md-3'>
-      <h2>User info</h2>
-
-      <h2 class="mt-3">New book</h2>
-
-    </div>
-  </div>
-</div>
-
+ <h1>グループ一覧</h1>
 <table class="table table-hover table-inverse">
     <thead>
       <tr>
