--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,3 +1,8 @@
+<div>
+  <%= link_to 'グループを作成する', new_group_path %>
+  <%= link_to 'グループ一覧', groups_path %>
+</div>
+
 <h1>ユーザー一覧</h1>
 
 <% @users.each do |user| %>
