--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -11,7 +11,7 @@
     </tbody>
   <% else %>
     <tbody>
-      <% @ideas.each do |book| %>
+      <% @ideas.each do |idea| %>
         <tr>
           <td><%= idea.title %></td>
           <td><%= idea.body %></td>
