--- a/app/views/public/ideas/show.html.erb
+++ b/app/views/public/ideas/show.html.erb
@@ -1,3 +1,4 @@
+<div class="d-flex justify-content-center">
 <div>
   <%= image_tag @idea.get_image %>
   <p>テーマ：<%= @idea.title %></p>
@@ -42,4 +43,6 @@
     <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
     <%= f.submit "送信する" %>
   <% end %>
+</div>
+
 </div>
