--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,4 +1,6 @@
-<h2>プロフィール編集</h2>
+<h2 class="d-flex justify-content-center">プロフィール編集</h2>
+
+<div class="d-flex justify-content-center">
 <%= form_with model: @user do |f| %>
   <label for="inputName">Name</label>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
@@ -8,3 +10,4 @@
   <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
   <%= f.submit "変更を保存" %>
 <% end %>
+</div>
