--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,22 +1,34 @@
-<div>
+<button type="button" class="btn btn-outline-info">
   <%= link_to 'グループを作成する', new_group_path %>
+</button>
+<button type="button" class="btn btn-outline-info">
   <%= link_to 'グループ一覧', groups_path %>
-</div>
+</button>
 
-<h1>ユーザー一覧</h1>
+<h1 class="d-flex justify-content-center">ユーザー一覧</h1>
 
-<% @users.each do |user| %>
-<div>
-  <p>名前</p>
-  <span>
-    <%=link_to user.name, user_path(user.id) %>
-  </span>
-  <p>自己紹介</p>
-  　<span>
-    <%=link_to user.body, user_path(user.id) %>
-  </span>
-  <p>画像</p>
-  <%= image_tag user.get_profile_image(100,100) %>
 
-</div>
-<% end %>
+<table class="table d-flex justify-content-center">
+  <thead>
+    <tr>
+      <th scope="col">名前</th>
+      <th scope="col">自己紹介</th>
+      <th scope="col">　</th>
+    </tr>
+  </thead>
+  <tbody>
+   <% @users.each do |user| %>
+    <tr>
+     <td>
+      <%=link_to user.name, user_path(user.id) %>
+     </td>
+  　 <td>
+      <%=link_to user.body, user_path(user.id) %>
+     </td>
+     <td>
+      <%= image_tag user.get_profile_image(100,100) %>
+     </td>
+    </tr>
+   <% end %>
+  <tbody>
+</table>
