レイアウト調整

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,17 @@
-<h1>education</h1>
+<div class="d-flex justify-content-center">
+<h1>Education</h1>
+</div>
+
+<div class="text-center">
+<p>
+板書や学習活動などの授業実践例や学級活動の実践例を共有<br>
+地域や担任学年、教科ごとにグループをつくってより深い意見交換が可能に<br>
+垣根を超えた交流も<br>
+まずはお試しで
+</p>
+</div>
+
+<div class="d-flex justify-content-center">
+<%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %>
+</div>
 
