--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
    <header class="shadow-sm bg-info">
     <nav class="navbar navbar-expand-lg navbar-light">
      <div class="container">
-      <a class="navbar-brand p-3" href="/"><%= image_tag('school.png') %></a>
+      <a class="navbar-brand p-3" href="/"><%= image_tag 'logo.jpg', size: '100x100' %></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
@@ -44,9 +44,6 @@
          </li>
          <% else %>
          <li class="nav-item">
-         <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %>
-         </li>
-         <li class="nav-item">
            <%= link_to "新規登録", new_user_registration_path %>
          </li>
          <li class="nav-item">
@@ -66,7 +63,7 @@
         <div class="row no-gutters">
           <div class="col-md-4">
             <p>教育活動アイデアを共有しあうサイト</p>
-            <%= image_tag('school.png') %>
+            <%= image_tag 'logo.jpg', size: '100x100' %>
           </div>
           <div class="col-md-8">
             <h6 class="text-white mt-2 mb-3">Link</h6>
